2016 US Election results

--- a/src/app/year-switcher/year-switcher.component.html
+++ b/src/app/year-switcher/year-switcher.component.html
@@ -1,4 +1,4 @@
 <div class="years">
     <div class="year" [class.active]="'2012' == year" (click)="changeYear('2012')">2012</div>
-    <div class="year disabled" [class.active]="'2016' == year">2016</div>
+    <div class="year" [class.active]="'2016' == year" (click)="changeYear('2016')">2016</div>
 </div>
