--- a/src/app/detailed-chart/detailed-chart.component.html
+++ b/src/app/detailed-chart/detailed-chart.component.html
@@ -17,7 +17,7 @@
                 color: '#e45252'
             }]"
             [valueAxis]="{
-                valueMarginsEnabled: false,
+                maxValueMargin: 0.1,
                 max: 100,
                 label: {
                     visible: false,
