Change copyright year

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -5,6 +5,6 @@
     <a href="https://js.devexpress.com" target="_blank" class="logo"></a>
     <div class="copy">
         <p><a href="https://go.devexpress.com/DevExpressDownload_DevExtremeCompleteTrial.aspx">Download your free 30 day trial</a> of DevExtreme today</p>
-        <p>Copyright &copy; 2017 Developer Express Inc.</p>
+        <p>Copyright &copy; {{year}} Developer Express Inc.</p>
     </div>
 </div>
