--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,18 +1,20 @@
 <dx-button class="back-button" text="Back to States" width="120" (click)="backToStates()" [visible]="showBackButton"></dx-button>
 <dx-button class="center-button" text="Center Map" width="120" (click)="centerMap()" [disabled]="isMapCentered" ></dx-button>
-<dx-vector-map 
-    class="map" 
-    [bounds]="bounds" 
-    [controlBar]="{ enabled: false }" 
-    [size]="{ height: 420, width: '100%' }" 
-    [layers]="[{
-        dataSource: dataSource,
-        opacity: usaLayerOpacity,
-        type: 'area',
-        colorGroupingField: 'democracy' + year,
-        colorGroups: [0, 0.5, 1],
-        palette: [ '#3689d6', '#e55253' ],
-        label: {
+<dx-vector-map class="map" [bounds]="bounds" [tooltip]="tooltip"
+    (onClick)="mapClick($event)" (onInitialized)="initialized($event)" (onCenterChanged)="centerChanged($event)">
+    <dxo-control-bar [enabled]="false"></dxo-control-bar>
+    <dxo-size [height]="420" width="100%"></dxo-size>
+    <dxo-title [text]="title" [subtitle]="subtitle"></dxo-title>
+    <dxo-background borderColor="#fff"></dxo-background>
+
+    <dxi-layer
+        [dataSource]="dataSource"
+        [opacity]="usaLayerOpacity"
+        type="area"
+        [colorGroupingField]="'democracy' + year"
+        [colorGroups]="[0, 0.5, 1]"
+        [palette]="[ '#3689d6', '#e55253' ]"
+        [label]="{
             enabled: true,
             dataField: 'NAME',
             'stroke-opacity': 0.3,
@@ -21,14 +23,15 @@
                 size: 12,
                 color: '#fff'
             }
-        }
-    },{
-        dataSource: countyDataSource,
-        type: 'area',
-        colorGroupingField: 'democracy' + year,
-        colorGroups: [0, 0.5, 1],
-        palette: [ '#3689d6', '#e55253' ],
-        label: {
+        }">
+    </dxi-layer>
+    <dxi-layer
+        [dataSource]="countyDataSource"
+        type="area"
+        [colorGroupingField]="'democracy' + year"
+        [colorGroups]="[0, 0.5, 1]"
+        [palette]="[ '#3689d6', '#e55253' ]"
+        [label]="{
             enabled: true,
             dataField: 'NAME',
             'stroke-opacity': 0.3,
@@ -37,15 +40,6 @@
                 size: 12,
                 color: '#fff'
             }
-        }
-    }]"
-    [tooltip]="tooltip" 
-    [title]="{
-        text: title,
-        subtitle: subtitle
-    }"
-    [background]="{ borderColor: '#fff' }"
-    (onClick)="mapClick($event)"
-    (onInitialized)="initialized($event)"
-    (onCenterChanged)="centerChanged($event)">
+        }">
+    </dxi-layer>
 </dx-vector-map>
