Remove unsupported  value from options of dxVectorMap(T657184)

--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -3,7 +3,7 @@
 <dx-vector-map class="map" [bounds]="bounds" [tooltip]="tooltip"
     (onClick)="mapClick($event)" (onInitialized)="initialized($event)" (onCenterChanged)="centerChanged($event)">
     <dxo-control-bar [enabled]="false"></dxo-control-bar>
-    <dxo-size [height]="420" width="100%"></dxo-size>
+    <dxo-size [height]="420"></dxo-size>
     <dxo-title [text]="title" [subtitle]="subtitle"></dxo-title>
     <dxo-background borderColor="#fff"></dxo-background>
 
